main/default/objects/Broker_Account__c/Broker_Account__c.object-meta.xml
<CustomObject>
    <label>Broker</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Broker ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>