main/default/objects/Broker_Account__c/fields/Alien_Broker__c.field-meta.xml
<CustomField>
    <fullName>Alien_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alien Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Broker Accounts (Alien Broker)</relationshipLabel>
    <relationshipName>Broker_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>