main/default/objects/Broker_Account__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  Broker_Contact__r.AccountId ,  Broker_Contact__r.Account.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Account</label>
    <type>Text</type>
</CustomField>