main/default/objects/Broker_Account__c/fields/Broker_Block_Override__c.field-meta.xml
<CustomField>
    <fullName>Broker_Block_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker Block Override</label>
    <type>Checkbox</type>
</CustomField>