main/default/objects/Broker_Account__c/fields/Broker_Contact__c.field-meta.xml
<CustomField>
    <fullName>Broker_Contact__c</fullName>
    <label>Broker Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Broker_Contact</value>
        </filterItems>
        <infoMessage>You Must Select a Broker Contact</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Brokers</relationshipLabel>
    <relationshipName>Broker_Accounts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>