main/default/objects/Broker_Account__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <formula>Broker_Contact__r.FirstName  &amp; &quot; &quot; &amp;  Broker_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Name</label>
    <type>Text</type>
</CustomField>