main/default/objects/Broker_Account__c/fields/Bypass_New_Broker_Validation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_New_Broker_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass New Broker Validation</label>
    <type>Checkbox</type>
</CustomField>