main/default/objects/Broker_Account__c/fields/IsPrimaryBroker__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryBroker__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Primary Broker?</label>
    <type>Checkbox</type>
</CustomField>