main/default/objects/Broker_Account__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Submission</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Broker Accounts</relationshipLabel>
    <relationshipName>Opportunity_Accounts1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>