main/default/objects/Broker_Account__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
                <default>true</default>
                <label>Broker</label>
            </value>
            <value>
                <fullName>Sub-Producer</fullName>
            </value>
            <value>
                <fullName>Additional Interest</fullName>
                <isActive>false</isActive>
                <label>Additional Interest</label>
            </value>
            <value>
                <fullName>Insured</fullName>
                <isActive>false</isActive>
                <label>Insured</label>
            </value>
            <value>
                <fullName>Reinsured</fullName>
                <isActive>false</isActive>
                <label>Reinsured</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>