main/default/objects/Broker_Account__c/validationRules/Block_Adding_Broker.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Adding_Broker</fullName>
    <active>true</active>
    <description>Block adding new broker into opportunity when Opportunity&apos;s Stage does not equal &apos;New&apos;, &apos;Prospect&apos;, &apos;Qualified&apos;</description>
    <errorConditionFormula>ISNEW()&amp;&amp; 
NOT(ISPICKVAL(Opportunity__r.StageName, &apos;New&apos;))&amp;&amp;
NOT(ISPICKVAL(Opportunity__r.StageName, &apos;Prospect&apos;))&amp;&amp;
NOT(ISPICKVAL(Opportunity__r.StageName, &apos;Eligibility Approved&apos;))&amp;&amp;
NOT(ISPICKVAL(Opportunity__r.StageName, &apos;Qualified&apos;))&amp;&amp; NOT(Bypass_New_Broker_Validation__c)</errorConditionFormula>
    <errorMessage>This Opportunity is locked for adding new broker.</errorMessage>
</ValidationRule>