main/default/objects/Broker_Account__c/validationRules/Broker_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_Validation_Rule</fullName>
    <active>false</active>
    <description>Block adding new broker into opportunity when Opportunity&apos;s Stage does not equal &apos;New&apos;, &apos;Prospect&apos;, &apos;Qualified&apos;</description>
    <errorConditionFormula>ISNEW()&amp;&amp;
NOT(ISPICKVAL(Opportunity__r.StageName, &apos;New&apos;))&amp;&amp;
NOT(ISPICKVAL(Opportunity__r.StageName, &apos;Prospect&apos;))&amp;&amp;
NOT(ISPICKVAL(Opportunity__r.StageName, &apos;Qualified&apos;))</errorConditionFormula>
    <errorMessage>This Opportunity is locked for adding new broker.</errorMessage>
</ValidationRule>