main/default/objects/Broker_Account__c/validationRules/PCC_Block_Editing_Record_Full_Amendment.validationRule-meta.xml
<ValidationRule>
    <fullName>PCC_Block_Editing_Record_Full_Amendment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()),  Opportunity__r.Product_Name__c = &apos;Private Company Combo&apos;, ISPICKVAL(Opportunity__r.Type, &apos;Full Amendment&apos;))</errorConditionFormula>
    <errorMessage>You cannot Edit Record on full amendment Submission.</errorMessage>
</ValidationRule>