main/default/objects/Broker_Account__c/validationRules/PCC_Block_Editing_Record_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>PCC_Block_Editing_Record_Locked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(Opportunity__r.No_of_Quotes__c &gt; 0, ISPICKVAL( Opportunity__r.StageName, &apos;Closed Won&apos;), ISPICKVAL( Opportunity__r.StageName, &apos;Closed Lost&apos;), ISPICKVAL( Opportunity__r.StageName, &apos;Declined&apos;)), NOT(ISNEW()),  Opportunity__r.Product_Name__c = &apos;Private Company Combo&apos;, NOT(ISPICKVAL(Opportunity__r.Type, &apos;Full Amendment&apos;)),
!Bypass_New_Broker_Validation__c )</errorConditionFormula>
    <errorMessage>You cannot Edit Record on locked Submission.</errorMessage>
</ValidationRule>