main/default/objects/Broker_Account__c/validationRules/Primary_Broker_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Broker_check</fullName>
    <active>false</active>
    <errorConditionFormula>AND( IsPrimaryBroker__c  = TRUE,
Opportunity__r.Primary_Broker_count__c = 1)</errorConditionFormula>
    <errorMessage>Primary broker exists for this Opportunity. To change or add a new Primary Broker, please uncheck the Primary Broker checkbox on the existing Broker</errorMessage>
</ValidationRule>