main/default/objects/Broker_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Broker_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>